--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "buefy": "^0.8.17",
     "core-js": "^3.6.4",
     "register-service-worker": "^1.7.1",
+    "vee-validate": "^3.3.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.1",
