--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/vue-fontawesome": "^0.1.9",
+    "@types/lodash": "^4.14.150",
     "axios": "^0.19.2",
     "buefy": "^0.8.17",
     "core-js": "^3.6.4",
+    "lodash": "^4.17.15",
     "register-service-worker": "^1.7.1",
     "vee-validate": "^3.3.0",
     "vue": "^2.6.11",
