--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vee-validate": "^3.3.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
+    "vue-cookies": "^1.7.0",
     "vue-property-decorator": "^8.4.1",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3",
